Update to fix issue with list open plus icon and wrapping span

--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -431,7 +431,7 @@ div.image-wrapper.center figcaption {
             opacity: 0.8;
         }
 
-        &.open {
+        &.openitem {
             transform: rotate(45deg);
         }
     }
